adding images and favicon

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Archit Khullar</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Free HTML5 Website Template by freehtml5.co" />
+	<meta name="description" content="About me - Archit Khullar" />
 	<meta name="keywords" content="Archit, Khullar, Archit Khullar, projets, github, resume, about me, skills, linkedin" />
 	<meta name="author" content="Archit Khullar" />
 
@@ -22,6 +22,8 @@
 
 	<link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
+
+
 
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
@@ -53,8 +55,8 @@
 				<div class="col-md-8 col-md-offset-2 text-center">
 					<div class="display-t js-fullheight">
 						<div class="display-tc js-fullheight animate-box" data-animate-effect="fadeIn">
-							<div class="profile-thumb" style="background: url(images/user-3.jpg);"></div>
-							<h1><span>Louie Jie Mahusay</span></h1>
+							<div class="profile-thumb" style="background: url(images/ArchitKhullar.jpg);"></div>
+							<h1><span>Archit Khullar</span></h1>
 							<h3><span>Web Developer / Photographer</span></h3>
 							<p>
 								<ul class="fh5co-social-icons">
