--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
 	<link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
+	<link rel='icon' href='favicon.ico' type='image/x-icon'/ >
 
 
 
