--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 	<link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
-	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+	<link rel="shortcut icon" type="image/x-icon" href="https://github.com/architkhullar/architkhullar.github.io/blob/master/favicon.ico">
 
 
 
