updating first section

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
 
 	<link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
+
+
+	<!-- favicon -->
 	<link rel="shortcut icon" type="image/x-icon" href="https://github.com/architkhullar/architkhullar.github.io/blob/master/favicon.ico">
 
 
@@ -58,7 +61,9 @@
 						<div class="display-tc js-fullheight animate-box" data-animate-effect="fadeIn">
 							<div class="profile-thumb" style="background: url(images/ArchitKhullar.jpg);"></div>
 							<h1><span>Archit Khullar</span></h1>
-							<h3><span>Web Developer / Photographer</span></h3>
+							<h2><span>Problem solver at heart; solving problems one bit at a time</span></h3>
+							<h3><span>Passionate about Autonomous Vehicles | Proficient in JAVA, NodeJs & Android</span></h3>
+							<h3><span>Computer Science Graduate Student - graduating Dec '18 | Seeking Full-time oppurtunities starting Jan '19</span></h3>
 							<p>
 								<ul class="fh5co-social-icons">
 									<li><a href="#"><i class="icon-twitter2"></i></a></li>
