--- a/index.html
+++ b/index.html
@@ -62,8 +62,10 @@
 							<div class="profile-thumb" style="background: url(images/ArchitKhullar.jpg);"></div>
 							<h1><span>Archit Khullar</span></h1>
 							<h2><span>Problem solver at heart; solving problems one bit at a time</span></h3>
-							<h3><span>Passionate about Autonomous Vehicles | Proficient in JAVA, NodeJs & Android</span></h3>
-							<h3><span>Computer Science Graduate Student - graduating Dec '18 | Seeking Full-time oppurtunities starting Jan '19</span></h3>
+							<h2><span><b><font color="black">Passionate about Autonomous Vehicles</font></b></span></h3>
+							<h2><span><b><font color="black">Proficient in JAVA, NodeJs & Android</font></b></span></h3>
+							<h3><span><font color="white">Computer Science Graduate Student - graduating Dec '18 </font></span></h3><br>
+							<h3><span><font color="white">Seeking Full-time oppurtunities starting Jan '19</font></span></h3><br>
 							<p>
 								<ul class="fh5co-social-icons">
 									<li><a href="#"><i class="icon-twitter2"></i></a></li>
