--- a/index.html
+++ b/index.html
@@ -68,10 +68,11 @@
 							<h3><span><font color="white">Seeking Full-time oppurtunities starting Jan '19</font></span></h3><br>
 							<p>
 								<ul class="fh5co-social-icons">
-									<li><a href="#"><i class="icon-twitter2"></i></a></li>
-									<li><a href="#"><i class="icon-facebook2"></i></a></li>
-									<li><a href="#"><i class="icon-linkedin2"></i></a></li>
-									<li><a href="#"><i class="icon-dribbble2"></i></a></li>
+									<li><a href="https://github.com/architkhullar/"><i class="icon-github-alt"></i></a></li>
+									<li><a href="https://www.linkedin.com/in/architkhullar/"><i class="icon-linkedin2"></i></a></li>
+									<li><a href="https://medium.com/@architkhullar19"><i class="icon-medium"></i></a></li>
+									<li><a href="https://www.quora.com/profile/Archit-Khullar"><i class="icon-quora"></i></a></li>
+									<li><a href="https://twitter.com/ArchitKhullar"><i class="icon-twitter2"></i></a></li>
 								</ul>
 							</p>
 						</div>
@@ -104,10 +105,11 @@
 					<p>Far far away, behind the word mountains, Quos quia provident consequuntur culpa facere ratione maxime commodi voluptates id repellat velit eaque aspernatur expedita. Possimus itaque adipisci there live the blind texts from the countries Vokalia and Consonantia, there live the blind texts. Quos quia provident consequuntur culpa facere ratione maxime commodi voluptates id repellat velit eaque aspernatur expedita. Possimus itaque adipisci.</p>
 					<p>
 						<ul class="fh5co-social-icons">
-							<li><a href="#"><i class="icon-twitter2"></i></a></li>
-							<li><a href="#"><i class="icon-facebook3"></i></a></li>
-							<li><a href="#"><i class="icon-linkedin2"></i></a></li>
-							<li><a href="#"><i class="icon-dribbble2"></i></a></li>
+							<li><a href="https://github.com/architkhullar/"><i class="icon-github-alt"></i></a></li>
+							<li><a href="https://www.linkedin.com/in/architkhullar/"><i class="icon-linkedin2"></i></a></li>
+							<li><a href="https://medium.com/@architkhullar19"><i class="icon-medium"></i></a></li>
+							<li><a href="https://www.quora.com/profile/Archit-Khullar"><i class="icon-quora"></i></a></li>
+							<li><a href="https://twitter.com/ArchitKhullar"><i class="icon-twitter2"></i></a></li>
 						</ul>
 					</p>
 				</div>
@@ -132,11 +134,12 @@
 							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">Senior Developer</h3>
-									<span class="company">Company Name - 2016 - Current</span>
+									<h3 class="timeline-title">Student Developer</h3>
+									<span class="company"><b>Launch LKN Autonomous Boat Project<br> Charlotte, NC | Sep '16 - Present</b></span>
 								</div>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+									<p align = 'left'>Developing a Vision system for the Autonomous boat (Python, TensorFlow)<br>• First module: Detecting a human being waving at the boat, with hands or holding a signal to get the attention of the boat<br>
+• Implementing computer vision and motion planning concepts<br></p>
 								</div>
 							</div>
 						</li>
@@ -144,11 +147,14 @@
 							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">Junior Developer</h3>
-									<span class="company">Company Name - 2013 - 2015</span>
+									<h3 class="timeline-title">Dayshifter | Skookum Dayshift</h3>
+									<span class="company">Skookum<br>Charlotte, NC | Aug '18'</span>
 								</div>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+									<p>Skookum Dayshift program -  A two-week intensive hands-on program following Google Design Sprint and Skookum’s own Agile sprint to design and develop a module from scratch.<br>
+• Worked as a NodeJS developer for a week in the development agile cycle to develop a one-page website providing registration and details about the Dayshift program<br>
+• Developed features like Social integration, Nac bar for the page, and input form to automate mailing<br>
+</p>
 								</div>
 							</div>
 						</li>
