deleting hire me, contact, map and footer; updated work ex and hello secxtion

--- a/index.html
+++ b/index.html
@@ -92,17 +92,26 @@
 			<div class="row">
 				<div class="col-md-4">
 					<ul class="info">
-						<li><span class="first-block">Full Name:</span><span class="second-block">Louie Jie Mahusay</span></li>
-						<li><span class="first-block">Phone:</span><span class="second-block">+ 1235 2355 98</span></li>
-						<li><span class="first-block">Email:</span><span class="second-block">info@yoursite.com</span></li>
-						<li><span class="first-block">Website:</span><span class="second-block">www.yoursite.com</span></li>
-						<li><span class="first-block">Address:</span><span class="second-block">198 West 21th Street, Suite 721 New York NY 10016</span></li>
+						<li><span class="first-block">Full Name:</span><span class="second-block">Archit Khullar</span></li>
+						<li><span class="first-block">Phone:</span><span class="second-block">+ 929 310 1100</span></li>
+						<li><span class="first-block">Email:</span><span class="second-block">architkhullar@yahoo.com<br> akhullar@uncc.edu</span></li>
+						<!-- <li><span class="first-block">Website:</span><span class="second-block">www.yoursite.com</span></li>
+						<li><span class="first-block">Address:</span><span class="second-block">198 West 21th Street, Suite 721 New York NY 10016</span></li> -->
+
 					</ul>
 				</div>
+
 				<div class="col-md-8">
 					<h2>Hello There!</h2>
-					<p>There live the blind texts far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in bookmarksgrove there live the blind texts far from the countries.</p>
-					<p>Far far away, behind the word mountains, Quos quia provident consequuntur culpa facere ratione maxime commodi voluptates id repellat velit eaque aspernatur expedita. Possimus itaque adipisci there live the blind texts from the countries Vokalia and Consonantia, there live the blind texts. Quos quia provident consequuntur culpa facere ratione maxime commodi voluptates id repellat velit eaque aspernatur expedita. Possimus itaque adipisci.</p>
+					<p>I am a Computer Science Graduate student with specialization in Intelligent and Interactive Systems at the University of North Carolina at Charlotte.<br>My areas of interests include Intelligent systems (AI), its applications and use of Algorithms for optimizations and solving real-world problems.<br>I am passionate about Autonomous vehicles, its engineering and the work that goes behind.</p>
+
+<p>A technology enthusiast at heart. I am a very keen observer and a fast learner with the ability to visualize and relate to the similarity in the problem with things around us.</p>
+
+<p>My ultimate aim is to work with the Research and Development Departments to deliver on the technological solutions that could help me give back to society and make this wonderful world of ours even better</p>
+
+<!-- <p>I like to call myself a problem solver who is always happy learning new things, working on the real world problems
+I like to interact with like-minded people. A regular reader of tech. articles, I do like to write as well, but frankly, I don't do it that often and many a time it all stays in my head. Music is something that I always find peace in. Ideas excite me, I am also passionate about exploring places, Driving and Badminton.
+</p> -->
 					<p>
 						<ul class="fh5co-social-icons">
 							<li><a href="https://github.com/architkhullar/"><i class="icon-github-alt"></i></a></li>
@@ -153,23 +162,63 @@
 								<div class="timeline-body">
 									<p>Skookum Dayshift program -  A two-week intensive hands-on program following Google Design Sprint and Skookum’s own Agile sprint to design and develop a module from scratch.<br>
 • Worked as a NodeJS developer for a week in the development agile cycle to develop a one-page website providing registration and details about the Dayshift program<br>
-• Developed features like Social integration, Nac bar for the page, and input form to automate mailing<br>
+• Developed features like Social integration, Nav	 bar for the page, and input form to automate mailing<br>
 </p>
 								</div>
 							</div>
 						</li>
+
 						<li class="animate-box timeline-unverted">
 							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">UI/UX Designer</h3>
-									<span class="company">Company Name - 2010 - 2012</span>
+									<h3 class="timeline-title">Graduate Research Assistant<br>Full Stack JAVA developer (J2EE)</h3>
+									<span class="company">UNC Nutrition Research Institute<br>Kannapolis, NC | May '18 - Jul '18</span>
 								</div>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+									<p align = "left">JAVA, Spring MVC, MySQL, JUnit<br>
+• Worked at Du - Lab under Dr Xiuxia Du at UNC Nutrition Research Institute<br>
+• Worked as full stack developer of a web application used by the research community in the Biotechnology domain to search for similar spectrum sample from the Mass Spectrometer<br>
+• Features like search, upload, compare for samples with different permission levels were developed & deployed
+</p>
 								</div>
 							</div>
 						</li>
+
+						<li class="timeline-inverted animate-box">
+							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
+							<div class="timeline-panel">
+								<div class="timeline-heading">
+									<h3 class="timeline-title">Graduate Research Assistant</h3>
+									<span class="company">University of North Carolina at Charlotte<br>Charlotte, NC | Jan '18 - May '18</span>
+								</div>
+								<div class="timeline-body">
+									<p>Research work under Dr Meera Sridhar on the topics:<br>
+• Deep learning technologies for Java malware detection<br>
+• A weighted adjacency matrix of all the internal function calls in the program to be tested was constructed<br>
+• This role involved a lot of programming mainly in Java, Python and Shell Script to implement Machine Learning concepts for Java Malware Detection<br>
+</p>
+								</div>
+							</div>
+						</li>
+
+						<li class="animate-box timeline-unverted">
+							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
+							<div class="timeline-panel">
+								<div class="timeline-heading">
+									<h3 class="timeline-title">Assistant System Engineer<br>SharePoint 2013 developer </h3>
+									<span class="company">Tata Consultancy Services<br>Bengaluru, India | Dec '15 - Jul '17</span>
+								</div>
+								<div class="timeline-body">
+									<p align = "left">• Technologies used - .NET (C#), SharePoint 2013, Client/Server Side Object Model<br>
+• Developed new SharePoint applications (out of the box and external) according to the different collaboration needs of the businesses<br>
+• Applications like the JIRA (Issue and project tracking), were developed<br>
+• Migration/Modification of legacy SharePoint data and applications from previous SharePoint versions to SharePoint 2013<br>
+</p>
+								</div>
+							</div>
+						</li>
+
 
 						<br>
 						<li class="timeline-heading text-center animate-box">
@@ -561,7 +610,7 @@
 		</div>
 	</div>
 
-	<div id="fh5co-started" class="fh5co-bg-dark">
+	<!-- <div id="fh5co-started" class="fh5co-bg-dark">
 		<div class="overlay"></div>
 		<div class="container">
 			<div class="row animate-box">
@@ -572,9 +621,9 @@
 				</div>
 			</div>
 		</div>
-	</div>
+	</div> -->
 
-	<div id="fh5co-consult">
+	<!-- <div id="fh5co-consult">
 		<div class="video fh5co-video" style="background-image: url(images/cover_bg_1.jpg);">
 			<div class="overlay"></div>
 		</div>
@@ -615,20 +664,11 @@
 
 			</form>
 		</div>
-	</div>
+	</div> -->
 
-	<div id="map" class="fh5co-map"></div>
-	</div>
+		<!-- <div id="map" class="fh5co-map"></div>
+		</div> -->
 
-	<div id="fh5co-footer">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-12">
-					<p>&copy; 2017 Free HTML5 Template. All Rights Reserved. <br>Designed by <a href="http://freehtml5.co" target="_blank">FreeHTML5.co</a> Demo Images: <a href="http://unsplash.com" target="_blank">Unsplash</a></p>
-				</div>
-			</div>
-		</div>
-	</div>
 
 	<div class="gototop js-top">
 		<a href="#" class="js-gotop"><i class="icon-arrow-up22"></i></a>
