finishing the blog section

--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@
 							<h3><span><font color="white">Seeking Full-time oppurtunities starting Jan '19</font></span></h3><br>
 							<p>
 								<ul class="fh5co-social-icons">
-									<li><a href="https://github.com/architkhullar/"><i class="icon-github-alt"></i></a></li>
-									<li><a href="https://www.linkedin.com/in/architkhullar/"><i class="icon-linkedin2"></i></a></li>
-									<li><a href="https://medium.com/@architkhullar19"><i class="icon-medium"></i></a></li>
-									<li><a href="https://www.quora.com/profile/Archit-Khullar"><i class="icon-quora"></i></a></li>
-									<li><a href="https://twitter.com/ArchitKhullar"><i class="icon-twitter2"></i></a></li>
+									<li><a href="https://github.com/architkhullar/" target="_blank"><i class="icon-github-alt"></i></a></li>
+									<li><a href="https://www.linkedin.com/in/architkhullar/" target="_blank"><i class="icon-linkedin2"></i></a></li>
+									<li><a href="https://medium.com/@architkhullar19" target="_blank"><i class="icon-medium"></i></a></li>
+									<li><a href="https://www.quora.com/profile/Archit-Khullar" target="_blank"><i class="icon-quora"></i></a></li>
+									<li><a href="https://twitter.com/ArchitKhullar" target="_blank"><i class="icon-twitter2"></i></a></li>
 								</ul>
 							</p>
 						</div>
@@ -114,11 +114,11 @@ I like to interact with like-minded people. A regular reader of tech. articles, 
 </p> -->
 					<p>
 						<ul class="fh5co-social-icons">
-							<li><a href="https://github.com/architkhullar/"><i class="icon-github-alt"></i></a></li>
-							<li><a href="https://www.linkedin.com/in/architkhullar/"><i class="icon-linkedin2"></i></a></li>
-							<li><a href="https://medium.com/@architkhullar19"><i class="icon-medium"></i></a></li>
-							<li><a href="https://www.quora.com/profile/Archit-Khullar"><i class="icon-quora"></i></a></li>
-							<li><a href="https://twitter.com/ArchitKhullar"><i class="icon-twitter2"></i></a></li>
+							<li><a href="https://github.com/architkhullar/" target="_blank"><i class="icon-github-alt"></i></a></li>
+							<li><a href="https://www.linkedin.com/in/architkhullar/" target="_blank"><i class="icon-linkedin2"></i></a></li>
+							<li><a href="https://medium.com/@architkhullar19" target="_blank"><i class="icon-medium"></i></a></li>
+							<li><a href="https://www.quora.com/profile/Archit-Khullar" target="_blank"><i class="icon-quora"></i></a></li>
+							<li><a href="https://twitter.com/ArchitKhullar" target="_blank"><i class="icon-twitter2"></i></a></li>
 						</ul>
 					</p>
 				</div>
@@ -557,41 +557,37 @@ I like to interact with like-minded people. A regular reader of tech. articles, 
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
 					<h2>Post on Medium</h2>
-					<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
+					<p>Trying to pen my thoughts to paper</p>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-md-4">
 					<div class="fh5co-blog animate-box">
-						<a href="#" class="blog-bg" style="background-image: url(images/portfolio-1.jpg);"></a>
+						<a href="https://medium.com/@architkhullar19/getting-into-self-driving-cars-baby-steps-2016e98c2c15" target="_blank" class="blog-bg" style="background-image: url(images/Medium-SelfDriving.png);"></a>
 						<div class="blog-text">
-							<span class="posted_on">Mar. 15th 2016</span>
-							<h3><a href="#">Photoshoot On The Street</a></h3>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+							<span class="posted_on">March 21st 2018</span>
+							<h3><a href="https://medium.com/@architkhullar19/getting-into-self-driving-cars-baby-steps-2016e98c2c15" target="_blank">Getting into Self-Driving Cars; Baby Steps</a></h3>
+							<p>The first thing that probably comes to your mind, when you hear Self -Driving Cars is Google Cars, which is now Waymo.</p>
 							<ul class="stuff">
-								<li><i class="icon-heart2"></i>249</li>
-								<li><i class="icon-eye2"></i>308</li>
-								<li><a href="#">Read More<i class="icon-arrow-right22"></i></a></li>
+								<li><a href="https://medium.com/@architkhullar19/getting-into-self-driving-cars-baby-steps-2016e98c2c15" target="_blank">Read More<i class="icon-arrow-right22"></i></a></li>
 							</ul>
 						</div>
 					</div>
 				</div>
-				<div class="col-md-4">
+				<!-- <div class="col-md-4">
 					<div class="fh5co-blog animate-box">
-						<a href="#" class="blog-bg" style="background-image: url(images/portfolio-2.jpg);"></a>
+						<a href="https://medium.com/@architkhullar19/getting-into-self-driving-cars-baby-steps-2016e98c2c15" target="_blank class="blog-bg" style="background-image: url(images/Medium-SelfDriving.png);"></a>
 						<div class="blog-text">
-							<span class="posted_on">Mar. 15th 2016</span>
-							<h3><a href="#">Surfing at Philippines</a></h3>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+							<span class="posted_on">March 21st 2018</span>
+							<h3><a href=""https://medium.com/@architkhullar19/getting-into-self-driving-cars-baby-steps-2016e98c2c15" target="_blank">Getting into Self-Driving Cars; Baby Steps</a></h3>
+							<p>The first thing that probably comes to your mind, when you hear Self -Driving Cars is Google Cars, which is now Waymo</p>
 							<ul class="stuff">
-								<li><i class="icon-heart2"></i>249</li>
-								<li><i class="icon-eye2"></i>308</li>
-								<li><a href="#">Read More<i class="icon-arrow-right22"></i></a></li>
+								<li><a href="https://medium.com/@architkhullar19/getting-into-self-driving-cars-baby-steps-2016e98c2c15" target="_blank">Read More<i class="icon-arrow-right22"></i></a></li>
 							</ul>
 						</div>
 					</div>
-				</div>
-				<div class="col-md-4">
+				</div> -->
+				<!-- <div class="col-md-4">
 					<div class="fh5co-blog animate-box">
 						<a href="#" class="blog-bg" style="background-image: url(images/portfolio-3.jpg);"></a>
 						<div class="blog-text">
@@ -605,7 +601,7 @@ I like to interact with like-minded people. A regular reader of tech. articles, 
 							</ul>
 						</div>
 					</div>
-				</div>
+				</div> -->
 			</div>
 		</div>
 	</div>
