--- a/index.html
+++ b/index.html
@@ -219,6 +219,23 @@ I like to interact with like-minded people. A regular reader of tech. articles, 
 							</div>
 						</li>
 
+						<li class="timeline-inverted animate-box">
+							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
+							<div class="timeline-panel">
+								<div class="timeline-heading">
+									<h3 class="timeline-title">Product Engineer - QA<br>Backend JAVA developer </h3>
+									<span class="company">ChargeBee<br>Chennai, India | Jun '15 - Nov '15</span>
+								</div>
+								<div class="timeline-body">
+									<p>• JAVA developer with a Accel Partners and Tiger Global Management funded Business to Business, Billing Subscription Solution Startup<br>
+• Responsible for developing/ modifying features for the billing solution based on the customer requests. Back-end development using Chargebee’s own framework and technologies like JAVA, MySQL, and JSP<br>
+• Handling error consolidation of commonly failed and release notes for consecutive builds that roll out every week<br>
+<br>
+</p>
+								</div>
+							</div>
+						</li>
+
 
 						<br>
 						<li class="timeline-heading text-center animate-box">
@@ -228,11 +245,11 @@ I like to interact with like-minded people. A regular reader of tech. articles, 
 							<div class="timeline-badge"><i class="icon-graduation-cap"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">Masters Degree</h3>
-									<span class="company">University Name - 2007 - 2009</span>
+									<h3 class="timeline-title">Masters Degree </h3>
+									<span class="company">University of North Carloina at Charlotte<br>Charlotte, NC | Aug '17 - Dec '18</span>
 								</div>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+									<p>Master of Science in Computer Science with specialization in Intelligent & Interactive Systems</p>
 								</div>
 							</div>
 						</li>
@@ -241,37 +258,12 @@ I like to interact with like-minded people. A regular reader of tech. articles, 
 							<div class="timeline-panel">
 								<div class="timeline-heading">
 									<h3 class="timeline-title">Bachelors Degree</h3>
-									<span class="company">University Name - 2002 - 2006</span>
+									<span class="company">Amrita Vishwa Vidyapeetham University<br>Coimbatore, India | Aug '11 - May '15</span>
 								</div>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+									<p>Bachelor of technology in Computer Science & Engineering</p>
 								</div>
 							</div>
-						</li>
-						<li class="timeline-inverted animate-box">
-							<div class="timeline-badge"><i class="icon-graduation-cap"></i></div>
-							<div class="timeline-panel">
-								<div class="timeline-heading">
-									<h3 class="timeline-title">Diploma Course</h3>
-									<span class="company">College Name - 1999 - 2001</span>
-								</div>
-								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-								</div>
-							</div>
-						</li>
-						<li class="animate-box timeline-unverted">
-							<div class="timeline-badge"><i class="icon-graduation-cap"></i></div>
-							<div class="timeline-panel">
-								<div class="timeline-heading">
-									<h3 class="timeline-title">Graduation</h3>
-									<span class="company">College Name - 1994 - 1998</span>
-								</div>
-								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-								</div>
-							</div>
-						</li>
 			    	</ul>
 				</div>
 			</div>
