adjusted education side error

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@ I like to interact with like-minded people. A regular reader of tech. articles, 
 						<li class="timeline-heading text-center animate-box">
 							<div><h3>Education</h3></div>
 						</li>
-						<li class="timeline-inverted animate-box">
+						<li class="animate-box timeline-unverted">
 							<div class="timeline-badge"><i class="icon-graduation-cap"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
@@ -253,7 +253,8 @@ I like to interact with like-minded people. A regular reader of tech. articles, 
 								</div>
 							</div>
 						</li>
-						<li class="animate-box timeline-unverted">
+						timeline-inverted animate-box
+						<li class="timeline-inverted animate-box">
 							<div class="timeline-badge"><i class="icon-graduation-cap"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
@@ -264,6 +265,7 @@ I like to interact with like-minded people. A regular reader of tech. articles, 
 									<p>Bachelor of technology in Computer Science & Engineering</p>
 								</div>
 							</div>
+							</li>
 			    	</ul>
 				</div>
 			</div>
