adding the new skill section and download button

--- a/index.html
+++ b/index.html
@@ -95,6 +95,9 @@
 						<li><span class="first-block">Full Name:</span><span class="second-block">Archit Khullar</span></li>
 						<li><span class="first-block">Phone:</span><span class="second-block">+ 929 310 1100</span></li>
 						<li><span class="first-block">Email:</span><span class="second-block">architkhullar@yahoo.com<br> akhullar@uncc.edu</span></li>
+						<li><br></li>
+						<li><br></li>
+						<p class="text-center"><a class="btn btn-primary" href="https://architkhullar.github.io/Resume@ArchitKhullar.pdf" target="_blank"><i class="fa fa-download"></i> Download Resume</a></p>
 						<!-- <li><span class="first-block">Website:</span><span class="second-block">www.yoursite.com</span></li>
 						<li><span class="first-block">Address:</span><span class="second-block">198 West 21th Street, Suite 721 New York NY 10016</span></li> -->
 
@@ -125,6 +128,88 @@ I like to interact with like-minded people. A regular reader of tech. articles, 
 			</div>
 		</div>
 	</div>
+
+	<div id="skills" class="text-center">
+  <div class="container">
+    <div class="section-title center">
+      <h2>Skills</h2>
+      <hr>
+    </div>
+    <div class="row">
+      <div class="col-md-4 col-sm-6 skill">
+        <h4>Web/Front-End</h4>
+        <ul>
+          <li class="btn btn-primary">Angular JS</li>
+          <li class="btn btn-primary">HTML5</li>
+          <li class="btn btn-primary">CSS3</li>
+          <li class="btn btn-primary">JavaScript</li>
+          <li class="btn btn-primary">jQuery</li>
+          <li class="btn btn-primary">Responsive Web Design</li>
+          <li class="btn btn-primary">Bootstrap</li>
+          <li class="btn btn-primary">MaterializeCSS</li>
+            <li class="btn btn-primary">Git</li>
+        </ul>
+      </div>
+      <div class="col-md-4 col-sm-6 skill">
+        <h4>Back-End/Database</h4>
+        <ul>
+          <li class="btn btn-primary">Java</li>
+          <li class="btn btn-primary">Spring Framework</li>
+          <li class="btn btn-primary">Python</li>
+          <li class="btn btn-primary">NodeJS</li>
+          <li class="btn btn-primary">ExpressJS</li>
+          <li class="btn btn-primary">MongoDB</li>
+          <li class="btn btn-primary">MySQL</li>
+          <li class="btn btn-primary">RESTful APIs</li>
+          <li class="btn btn-primary">JSP</li>
+          <li class="btn btn-primary">C</li>
+          <li class="btn btn-primary">Postman</li>
+          <li class="btn btn-primary">Mocha and Chai</li>
+          <li class="btn btn-primary">Junit</li>
+        </ul>
+      </div>
+      <div class="col-md-4 col-sm-6 skill">
+        <h4>Mobile Development</h4>
+        <ul>
+          <li class="btn btn-primary">Android SDK</li>
+          <li class="btn btn-primary">Firebase</li>
+          <li class="btn btn-primary">SQLite</li>
+          <li class="btn btn-primary">Realm for Android</li>
+          <li class="btn btn-primary">JSON</li>
+          <li class="btn btn-primary">Android Studio</li>
+        </ul>
+      </div>
+      <div class="col-md-6 col-sm-6 skill">
+        <h4>Analytical/Problem-solving</h4>
+        <ul>
+          <li class="btn btn-primary">Data Structures</li>
+          <li class="btn btn-primary">Algorithms</li>
+          <li class="btn btn-primary">Machine Learning</li>
+          <li class="btn btn-primary">MATLAB</li>
+          <li class="btn btn-primary">Anaconda</li>
+          <li class="btn btn-primary">Jupyter Notebook</li>
+        </ul>
+      </div>
+      <div class="col-md-6 col-sm-6 skill">
+        <h4>Others</h4>
+         <ul>
+          <li class="btn btn-primary">Agile Development</li>
+          <li class="btn btn-primary">Software Development Lifecycle</li>
+          <li class="btn btn-primary">AWS EC2</li>
+          <li class="btn btn-primary">Image Processing</li>
+          <li class="btn btn-primary">Github</li>
+          <li class="btn btn-primary">Eclipse</li>
+          <li class="btn btn-primary">NetBeans</li>
+          <li class="btn btn-primary">SAP NetWeaver Process Integration</li>
+          <li class="btn btn-primary">SAP Solution Manager</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
 
 	<div id="fh5co-resume" class="fh5co-bg-color">
 		<div class="container">
@@ -250,6 +335,7 @@ I like to interact with like-minded people. A regular reader of tech. articles, 
 								</div>
 								<div class="timeline-body">
 									<p>Master of Science in Computer Science with specialization in Intelligent & Interactive Systems</p>
+									<p>Coursework:<br>• Intro. to Natural Languaage Processing<br>• Parallel Computing<br>• Algorithms and Data Structures<br>• Robot Motion Planning<br>• Mobile Application Development<br>• Machine Learning<br>• Computer Vision<br>• Advanced Mobile Application Development</p>
 								</div>
 							</div>
 						</li>
@@ -271,6 +357,9 @@ I like to interact with like-minded people. A regular reader of tech. articles, 
 			</div>
 		</div>
 	</div>
+
+
+
 
 
 	<div id="fh5co-features" class="animate-box">
@@ -596,9 +685,9 @@ I like to interact with like-minded people. A regular reader of tech. articles, 
 						</div>
 					</div>
 				</div> -->
-			</div>
+			<!-- </div>
 		</div>
-	</div>
+	</div> -->
 
 	<!-- <div id="fh5co-started" class="fh5co-bg-dark">
 		<div class="overlay"></div>
