--- a/index.html
+++ b/index.html
@@ -419,43 +419,43 @@ I like to interact with like-minded people. A regular reader of tech. articles, 
 		<div class="container">
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2>Work</h2>
+					<h2>Projects</h2>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="#" class="work" style="background-image: url(images/portfolio-1.jpg);">
+					<a href="https://github.com/architkhullar/RobotMotionPlanning_TermProject" target="_blank" class="work" style="background-image: url(images/RMP_project.JPG);">
 						<div class="desc">
-							<h3>Project Name</h3>
-							<span>Illustration</span>
+							<h3>Rapidly – exploring random trees (RRT) </h3>
+							<span>Implemented Rapidly – exploring random trees (RRT) a Probabilistic Roadmap methodology for path finding in a parking space scenario for a rectangular car like robot (DOF: R2 * S1) and its implementation with turtle bot using ROS</span>
 						</div>
 					</a>
 				</div>
 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="#" class="work" style="background-image: url(images/portfolio-2.jpg);">
+					<a href="https://github.com/architkhullar/Project5" target="_blank" class="work" style="background-image: url(images/SmartDiscounts.png);">
 						<div class="desc">
-							<h3>Project Name</h3>
+							<h3>Tailored Regional discounts using Bluetooth Beacons</h3>
 							<span>Brading</span>
 						</div>
 					</a>
 				</div>
 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="#" class="work" style="background-image: url(images/portfolio-3.jpg);">
+					<a href="https://github.com/architkhullar/AdvancedMad_Project1/wiki" target="_blank" class="work" style="background-image: url(images/AWS.png);">
 						<div class="desc">
-							<h3>Project Name</h3>
-							<span>Illustration</span>
+							<h3>REST API for REsturant Management</h3>
+							<span></span>
 						</div>
 					</a>
 				</div>
 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="#" class="work" style="background-image: url(images/portfolio-4.jpg);">
+					<a href="https://github.com/architkhullar/CVIP-assistive-system" target="_blank" class="work" style="background-image: url(images/CofeeMaker.png);">
 						<div class="desc">
-							<h3>Project Name</h3>
-							<span>Design</span>
+							<h3>Human Computer Interaction (HCI)</h3>
+							<span>•	Human Computer Interaction (HCI), head wearable device for visually impaired individuals, which guides them to operate a Coffee maker via audio feedback based on their movements. The system detects and identifies various objects in the vicinity, the hand movements of the user and instructs the user accordingly. Used Python with OpenCV library running on Raspberry Pi</span>
 						</div>
 					</a>
 				</div>
-				<div class="col-md-3 text-center col-padding animate-box">
+				<!-- <div class="col-md-3 text-center col-padding animate-box">
 					<a href="#" class="work" style="background-image: url(images/portfolio-5.jpg);">
 						<div class="desc">
 							<h3>Project Name</h3>
@@ -486,7 +486,7 @@ I like to interact with like-minded people. A regular reader of tech. articles, 
 							<span>Illustration</span>
 						</div>
 					</a>
-				</div>
+				</div> -->
 			</div>
 		</div>
 	</div>
